# call_graph

./: .gitignore  QUICKSTART.md  README.md  call-graph.py  demo.sh  export_graph.sh  init_db.sql  pyproject.toml  quick_demo.sh  reorganize_project.py  run.sh  使用指南.md  使用说明.md  快速开始-性能优化版.md  快速开始.md  性能优化指南.md  文档索引.md  纯Python使用方案.md  项目总结.md
call_graph/: __init__.py  __main__.py  analyzer.py  analyzer_optimized.py  database.py  main.py  parsers.py
examples/: example_fullpath.py  example_performance.py  example_performance_comparison.py  example_usage.py
examples/sample_project/: Example.java  README.md  advanced.cpp  example.c  example.go  example.js  example.rs  example.ts  main.py  utils.py
v1_python_only/: call_chain_analyzer.py  call_graph_extractor.py  config.py  database.py  example.py  init_db.sql  main.py  requirements.txt  setup_example.py
v2_multi_language/: config_v2.py  graph_database.py  init_graph_db.sql  requirements_v2.txt  test_c_cpp.py  tsg_engine.py  unified_analyzer.py
v2_multi_language/examples/: example.c  example.cpp
v2_multi_language/tsg_rules/: c.tsg  cpp.tsg  java.tsg  javascript.tsg  python.tsg  rust.tsg  typescript.tsg
