[project]
name = "call-graph"
version = "0.1.0"
description = "Multi-language function call graph analyzer using tree-sitter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-c>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-go>=0.21.0",
]

[tool.uv]
package = true
